# community-engagement

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yml  conftest.py  main.py  pyproject.toml
backend/: Dockerfile  __init__.py  main.py  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: __init__.py  auth.py
backend/app/core/: config.py  database.py  oauth.py
backend/app/models/: database.py  user.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_oauth.py
