[project]
name = "community-engagement"
version = "0.1.0"
description = "yet another try to make something useful"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "google-api-python-client>=2.169.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "httpx>=0.27.0",
    "pre-commit>=4.2.0",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "python-telegram-bot>=22.0",
    "requests>=2.32.3",
    "ruff>=0.11.8",
    "uvicorn>=0.34.2",
]

[tool.pytest]
pythonpath = [
    "backend"
]
testpaths = [
    "backend/tests"
]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
